# codexStudy

./: .gitignore  README.md  README.zh-CN.md  codex-new.md  log.md  pnpm-lock.yaml  pnpm-workspace.yaml
codex-rs/: Cargo.toml
codex-rs/chat-agent-core/: Cargo.toml
codex-rs/chat-agent-core/src/: error.rs  lib.rs  runtime.rs  runtime_selector.rs
codex-rs/chat-agent-core/src/executor/: approval_tools.rs  command_tools.rs  core_delegate.rs  dispatcher.rs  edit_replace.rs  file_tools.rs  mod.rs  output_limits.rs  output_spill.rs  search_tools.rs
codex-rs/chat-agent-core/src/loop_control/: guardrails.rs  mod.rs  retry_policy.rs  run_loop.rs  stop_conditions.rs  turn_commit.rs
codex-rs/chat-agent-core/src/planner/: mod.rs  model_client.rs  prompt_builder.rs  response_parser.rs
codex-rs/chat-agent-core/src/protocol/: action.rs  final_result.rs  mod.rs  observation.rs  prompt_contract.rs  turn.rs
codex-rs/chat-agent-core/src/session/: capability_map.rs  mod.rs  session_builder.rs  session_context.rs  tool_approval.rs
codex-rs/chat-agent-core/src/state/: event_mapper.rs  mod.rs  pending_turn.rs  run_state.rs  step_record.rs
codex-rs/codex-new-core/: BUILD.bazel  Cargo.toml
codex-rs/codex-new-core/src/: activity.rs  diff.rs  engine.rs  environment.rs  error.rs  fsx.rs  git.rs  lib.rs  manifest.rs  memory.rs  models.rs  policy.rs  protocol.rs  recovery.rs  review.rs  sessions.rs  test_commands.rs  traceback.rs  workspace.rs
desktop/: .gitignore  CODEXSTUDY_BACKLOG.md  index.html  package.json  vite.config.ts
docs/: CODEXSTUDY.md  agent执行进度.md  安全模式新UI-实现进度.md  (+5 more)
(+409 files in other folders)
