[package]
name = "chat-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process", "rt", "sync", "time"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lib]
doctest = false
